@@ -1,14 +1,14 @@
 ROOTDIR = ../../../..
 include $(ROOTDIR)/config.mk
 
-CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
-CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Modules/ConfigXml
-CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Modules/TinyXml
+CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
+CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Modules/ConfigXml
+CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Modules/TinyXml
 
 all:
-	$(CC) $(CFLAGS) -c  Cx_ConfigXml.cpp
-	$(CC) $(CFLAGS) -c  Cx_XmlSection.cpp
-	$(CC) $(CFLAGS) -c  Module.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_ConfigXml.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_XmlSection.cpp
+	$(CC) $(CFLAGS_SO) -c  Module.cpp
 	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libConfigXml.so *.o
 clean:
 	rm -rf *.so
