@@ -1,14 +1,14 @@
 ROOTDIR = ../../../..
 include $(ROOTDIR)/config.mk
 
-CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
+CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
 
 
 all:
-	$(CC) $(CFLAGS) -c  Cx_FileTransaction.cpp
-	$(CC) $(CFLAGS) -c  Cx_TempFolder.cpp
-	$(CC) $(CFLAGS) -c  Plugin.cpp
-	$(CC) $(CFLAGS) -c  Module.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_FileTransaction.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_TempFolder.cpp
+	$(CC) $(CFLAGS_SO) -c  Plugin.cpp
+	$(CC) $(CFLAGS_SO) -c  Module.cpp
 	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libFileUtility.so *.o
 clean:
 	rm -rf *.so
