@@ -1,12 +1,12 @@
 ROOTDIR = ../../../..
 include $(ROOTDIR)/config.mk
 
-CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
+CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
 
 all:
-	$(CC) $(CFLAGS) -c  Cx_ObjectFactory.cpp
-	$(CC) $(CFLAGS) -c  Module.cpp
-	$(CC) $(CFLAGS) -c  Cx_PluginLoader.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_ObjectFactory.cpp
+	$(CC) $(CFLAGS_SO) -c  Module.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_PluginLoader.cpp
 	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libPluginManager.so *.o -ldl
 clean:
 	rm -rf *.so
