@@ -1,11 +1,11 @@
 ROOTDIR = ../../../..
 include $(ROOTDIR)/config.mk
 
-CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
+CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
 
 all:
-	$(CC) $(CFLAGS) -c  Cx_StringTable.cpp
-	$(CC) $(CFLAGS) -c  Module.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_StringTable.cpp
+	$(CC) $(CFLAGS_SO) -c  Module.cpp
 	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libStringTable.so *.o
 clean:
 	rm -rf *.so
