@@ -1,13 +1,13 @@
 ROOTDIR = ../../../..
 include $(ROOTDIR)/config.mk
 
-CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
+CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
 
 all:
-	$(CC) $(CFLAGS) -c  Cx_ClipboardUtil.cpp
-	$(CC) $(CFLAGS) -c  Cx_GuidGenerator.cpp
-	$(CC) $(CFLAGS) -c  Cx_TextUtil.cpp
-	$(CC) $(CFLAGS) -c  Module.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_ClipboardUtil.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_GuidGenerator.cpp
+	$(CC) $(CFLAGS_SO) -c  Cx_TextUtil.cpp
+	$(CC) $(CFLAGS_SO) -c  Module.cpp
 	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libTextUtility.so *.o
 clean:
 	rm -rf *.so
