@@ -5,6 +5,9 @@ X3 C++ PluginFramework
     * Add '-shared' to C_FLAGS only for plugins (lib*.so, except *.app).
     * Add 'static const' keyword to class id definition.
 
+    * Include PluginManager.h in XComCreator.h, so x3GetObjectFactory can use the exist handle of PluginManager.
+    * Add '-fPIC' to C_FLAGS_SO in config.mk
+
 2011-06-17
 
     * Remove Ix_ObjectFactory::HasCreatorReplaced, SpecialInterfaceObject.
